--- a/style.css
+++ b/style.css
@@ -1,1 +1,25 @@
+body {
+  font-family: "Courier New", monospace;
+  color: white;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  text-shadow: 1 1 20px rgba(255, 255, 255, 1);
+}
 
+a {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:hover {
+  text-shadow: 0 0 10 px white;
+}
+
+.home {
+  background-color: black;
+  padding: 20px;
+}
+
+.home .header-banner {
+  background: url("background.png") no-repeat center center;
