--- a/style.css
+++ b/style.css
@@ -197,3 +197,63 @@
 .about nav a:hover {
     text-shadow: 0 0 10px white;
 }
+
+.calendar body {
+    font-family: "Courier New", monospace;
+    text-align: center;
+    color: white;
+    text-shadow: 0 0 5px white;
+    background-color: #000;
+    color: #fff;
+}
+
+.calendar .month-container {
+    width: 80%;
+    margin: auto;
+}
+
+.calendar .month-header {
+    font-size: 24px;
+    color: #b30000;
+    cursor: pointer;
+    text-align: left;
+    margin-bottom: 10px;
+}
+
+.calendar .month-content {
+    display: block;
+}
+
+.calendar-grid {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 10px;
+    justify-content: center;
+    margin: auto;
+    max-width: 700px;
+}
+
+.calendar .day {
+    background-color: transparent;
+    border: 2px solid white;
+    padding: 10px;
+    text-align: center;
+}
+
+.calendar .day img {
+    width: 70px;
+    height: 70px;
+    display: block;
+    margin: auto;
+    border-radius: 5px;
+}
+
+.calendar .day audio {
+    width: 100%;
+}
+
+.calendar p {
+    font-size: 14px;
+    margin: 0;
+    padding-bottom: 5px;
+}
