--- a/style.css
+++ b/style.css
@@ -229,8 +229,8 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
     justify-content: center;
-    margin: auto;
-    max-width: 700px;
+    padding: 20px
+    margin: 20px;
 }
 
 .calendar .day {
