--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@
     text-shadow: 0 0 10px white;
 }
 
-.calendar body {
+.calendar {
     font-family: "Courier New", monospace;
     text-align: center;
     text-shadow: 0 0 5px white;
