--- a/style.css
+++ b/style.css
@@ -254,8 +254,8 @@
 }
 
 .calendar .day img {
-    width: 70px;
-    height: 70px;
+    width: 150px;
+    height: auto;
     display: block;
     margin: auto;
     border-radius: 5px;
