--- a/style.css
+++ b/style.css
@@ -229,7 +229,8 @@
 
 .calendar .month-header {
     font-size: 24px;
-    color: #b30000;
+    font-weight: bold;
+    color: white;
     cursor: pointer;
     text-align: left;
     margin-bottom: 10px;
