--- a/style.css
+++ b/style.css
@@ -122,7 +122,8 @@
 }
 
 .contact h1 {
-    color: #e30000;
+    color: black;
+    font-weight: bold;
     font-size: 36px;
     margin-bottom: 10px;
     text-shadow: 0 0 20px rgba(255, 255, 255, 1);
@@ -230,7 +231,7 @@
 .calendar .month-header {
     font-size: 24px;
     font-weight: bold;
-    color: white;
+    color: black;
     cursor: pointer;
     text-align: left;
     margin-bottom: 10px;
