--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@
     padding-bottom: 5px;
 }
 
-.feedback html, body {
+.feedback body {
   margin: 0;
   padding: 0;
   font-family: "Courier New", Courier, monospace;
@@ -311,6 +311,14 @@
   background: rgba(0, 0, 0, 0.6) !important;
   color: white !important;
   border: 1px solid #ffffff !important;
+}
+
+.feedback ::placeholder {
+  color: #444; 
+}
+
+.feedback label {
+  color: #444;
 }
 
 .form-label {
@@ -340,8 +348,9 @@ legend {
 }
 
 .btn-primary {
-  background-color: #ff6600 !important;
-  border: none;
+  color: #000;
+  background-color: white !important;
+  border: 1px solid #ccc;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -359,9 +368,11 @@ legend {
 }
 
 .reply-box {
-  background: rgba(0, 0, 0, 0.6);
-  border: 1px solid white;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.8);
+  float: right;
+  width: 45%;
+  background-color: rgba(255, 255, 255, 0.8); 
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  padding: 1rem;
   border-radius: 8px;
 }
 
