--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@
     padding-bottom: 5px;
 }
 
-.feedback body {
+.feedback {
   margin: 0;
   padding: 0;
   font-family: "Courier New", Courier, monospace;
