--- a/style.css
+++ b/style.css
@@ -396,3 +396,22 @@ legend {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
 }
+
+.thank-you {
+      background: url("feedback.jpg") no-repeat center center fixed;
+      color: white;
+      font-family: "Courier New", Courier, monospace;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      text-align: center;
+    }
+
+    .thank-you p {
+      font-size: 2.5rem;
+      text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px white;
+      margin: 10px 0;
+    }
